--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "clipboard": "^2.0.6",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
+    "js-alert": "^1.0.4",
     "mongodb": "^3.6.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.3.5"
   }
 }
