--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.6.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
+    "selenium-webdriver": "^4.0.0-alpha.7",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^10.3.5"
   }
