--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "clipboard": "^2.0.6",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.2",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.0",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
+    "filereader": "^0.10.3",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
-    "sweetalert2": "^10.3.5"
+    "xls-to-json-lc": "^0.3.4",
+    "xlsx-to-json-lc": "^0.5.0"
   }
 }
